--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
+    "vue-i18n": "^8.14.1",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
