--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "popper.js": "^1.15.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.14.1",
     "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
